# c-classic-classifiers

./: .gitignore  README.md
.github/workflows/: python-integration.yml
CCLASSY/: pyproject.toml  setup.py
CCLASSY/CCLASSY/: __init__.py  core.py  knn.py  logistic_regression.py  naive_bayes.py  svm.py
CCLASSY/src/: cmodule.c  common.c  common.h  knn.c  logistic_regression.c  naive_bayes.c  svm.c
CCLASSY/tests/: test_knn.py  test_logistic_regression.py  test_naive_bayes.py  test_svm.py
